rudimentary login functionality
